[package]
name = "thebestofcmu-client"
version = "0.1.0"
authors = ["Anand Beh <anandbeh@cmu.edu>"]
edition = "2021"
description = "Really, the best of CMU"
repository = "https://github.com/A248/thebestofcmu"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thebestofcmu-common = { path = "../common" }
wasm-bindgen = "0.2.80"
slint = "0.2.5"
hyper = "0.14.20"
hyper-rustls = { version = "0.23.0", features = ["http1", "http2"] }