[package]
name = "thebestofcmu-common"
version = "0.1.0"
authors = ["Anand Beh <anandbeh@cmu.edu>"]
edition = "2021"
description = "Really, the best of CMU"
repository = "https://github.com/A248/thebestofcmu"
license = "AGPL-3.0-or-later"

[dependencies]
eyre = "0.6.8"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.83"
hyper = { version = "0.14.20", features = ["server", "http1", "http2"] }
