[package]
name = "thebestofcmu-server"
version = "0.1.0"
authors = ["Anand Beh <anandbeh@cmu.edu>"]
edition = "2021"
description = "Really, the best of CMU"
repository = "https://github.com/A248/thebestofcmu"
license = "AGPL-3.0-or-later"

[dependencies]
thebestofcmu-common = { path = "../common" }
eyre = "0.6.8"
stable-eyre = "0.2.2"
hyper = { version = "0.14.20", features = ["server", "http1", "http2"] }
tokio = { version = "1.20.1", default-features = false }
tokio-rustls = "0.23.4"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
async-std = { version = "1.12.0", features = ["attributes"] }
async-ctrlc = "1.2.0"
log = "0.4.17"
simple-logging = "2.0.2"
sqlx = { version = "0.5.9", features = ["runtime-async-std-rustls", "postgres", "decimal"] }
ron = "0.7.1"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.83"
time = { version = "0.3.14", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.3.0"